[gd_scene load_steps=18 format=2]

[ext_resource path="res://imagens/nave/nave_2_final.png" type="Texture" id=1]
[ext_resource path="res://imagens/luz/around.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Enemys/enemy.gd" type="Script" id=3]
[ext_resource path="res://Cenas/GUI_Player/ProgressBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Efeitos/smoke.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Efeitos/technical_problem.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/Efeitos/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Musica/Efeitos sonoros/enemy_hurt.wav" type="AudioStream" id=8]
[ext_resource path="res://Musica/Efeitos sonoros/enemy_shot.wav" type="AudioStream" id=9]
[ext_resource path="res://imagens/nave/nave1_final.png" type="Texture" id=10]

[sub_resource type="Theme" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 66.8531

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -59.5293, -44.1294, -43.9634, -43.6578, -40.6616, -33.2805, -18.0204, -13.4695, 0.375614, -31.3938, 15.9415, -16.2996, 40.4694, -30.9221, 43.2996, -42.7144, 59.3371, -44.1294, 61.2239, -32.3371, 57.4503, -13.4695, 48.0165, -11.5827, 41.8845, -16.2996, 22.5451, 1.15297, 45.1864, 2.56805, 37.6393, 13.8887, 14.9981, 11.0585, 6.9793, 17.6622, 12.1679, 19.0773, 17.3565, 38.8883, 15.9415, 55.3976, 8.86607, 57.2843, 1.319, 58.2277, -6.22807, 57.2843, -14.2468, 55.3976, -16.1336, 41.2468, -12.8318, 20.0207, -5.28469, 19.0773, -13.3035, 12.0019, -36.8881, 13.8887, -44.4351, 3.51145, -23.209, 3.51145, -42.0767, -16.2996, -45.3785, -12.0544, -56.6991, -12.0544, -61.8877, -28.0919 )

[sub_resource type="CircleShape2D" id=4]
radius = 669.926

[sub_resource type="Animation" id=6]
resource_name = "enemy1"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Mob/LightOccluder2D:occluder")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 100 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -43.353, 59.0604, -22.9138, 52.4906, -22.9138, 57.9654, -1.37959, 51.3957, 21.2495, 59.4254, 19.7896, 53.5856, 41.3238, 59.0604, 48.6235, 45.9209, 37.6739, 37.1612, 15.4098, 7.96236, 25.9944, 10.5173, 3.00024, -50.4354, 3.36523, -54.4502, -0.649614, -57.7351, -5.39443, -54.4502, -4.66446, -50.4354, -26.9286, 9.05731, -18.8989, 7.96236, -41.893, 38.2562, -49.9227, 44.4609 )

[sub_resource type="Animation" id=7]
resource_name = "enemy2"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Mob/LightOccluder2D:occluder")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 200 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[node name="Mob" type="KinematicBody2D" groups=[
"minimap_objects",
"mobs",
"player2",
]]
position = Vector2( 0.291985, -0.498253 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
region_rect = Rect2( 24, 214, 133, 177 )

[node name="BulletPointEnemy" type="Position2D" parent="."]
position = Vector2( 0, -80 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -450 )
rotation = 3.14159
texture = ExtResource( 2 )
texture_scale = 0.5
color = Color( 0.984314, 0.466667, 0.427451, 0.639216 )
energy = 1.5
shadow_enabled = true

[node name="smoke_particle" parent="." instance=ExtResource( 5 )]

[node name="ProgressBar" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 0.996078, 0.0196078, 0.0196078, 1 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="Visao" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visao"]
shape = SubResource( 4 )

[node name="FireRate" type="Timer" parent="."]
autostart = true

[node name="technical_problem" parent="." instance=ExtResource( 6 )]
position = Vector2( -52.3711, -34.7752 )
rotation = 1.48729
emitting = false

[node name="technical_problem2" parent="." instance=ExtResource( 6 )]
position = Vector2( 19.3189, 8.9896 )
rotation = 0.557964
emitting = false

[node name="explosion" parent="." instance=ExtResource( 7 )]

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -17.0
bus = "Musica_Opc"

[node name="tiro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -21.0
bus = "Musica_Opc"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy1 = SubResource( 6 )
anims/enemy2 = SubResource( 7 )
[connection signal="body_entered" from="Visao" to="." method="_on_Visao_body_entered"]
[connection signal="body_exited" from="Visao" to="." method="_on_Visao_body_exited"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
